--- a/index.Rmd
+++ b/index.Rmd
@@ -11,9 +11,11 @@ lot: yes
 lof: yes
 geometry: [b5paper, tmargin=2.5cm, bmargin=2.5cm, lmargin=3.5cm, rmargin=2.5cm]
 site: bookdown::bookdown_site
-description: "rBAS中文使用说明版本V0.1"
+description: "rBAS中文使用说明文档V0.2"
 github-repo: jywang2016/rBAS
+always_allow_html: yes
 #cover-image: images/cover.jpg
+rmd_files: ["index.Rmd","00-author.Rmd","01-install.Rmd","02-algorithm.Rmd","02-mixalgorithm.Rmd","03-rBAS.Rmd","04-interface.Rmd","05-examples.Rmd","05-examples2.Rmd","06-updates.Rmd","06-paper.Rmd","06-matlabr.Rmd","06-matlabpython.Rmd","07-hmm.Rmd","08-references.Rmd"]
 ---
 \mainmatter
 
@@ -27,16 +29,29 @@ github-repo: jywang2016/rBAS
 
 - 第 \@ref(algorithm) 章介绍了**BAS算法**以及在其基础上出现的各种**改进算法**的**原理**，当然，随着算法的不断改进和发展，这个文档还需要随之不断更新。
 
-- 第 \@ref(rBAS) 章讲述了如何在`R`中使用`rBAS`包**调用收录的算法的对应函数**，以及一些简单的**案例**（大部分是`BAS`相关文献中的算例和`benchmark functions`）。每一句出现的代码我都会尽我所能去注释，让大家了解每一步的意义，以及`R`的简单易用。我也希望，自己的语言能尽力通俗，对于其他工具的使用者来说。
+- 第 \@ref(mixedalgorithm) 章中介绍了BAS与其他算法结合的算法。目前收录的有，王糖糖同学提供的BSO，即BAS和PSO的结合。`rBAS`包也提供了这些算法的实现与调用。
 
-- 第 \@ref(examples) 章主要介绍的是BAS及变体算法**在各种领域的应用**，当然，少不了对应的案例描述和代码。**可能有些涉及到各位作者的研究，不会做到完全的开源**，但在**李帅**老师的组织下，我相信这会是最完善全面的`BAS`应用大全。
+- 第 \@ref(rBAS) 章讲述了如何在`R`中使用`rBAS`包**调用收录的算法的对应函数**，以及一些简单的**案例**（大部分是`BAS`相关文献中的算例和`benchmark functions`）。每一句出现的代码我都会尽我所能去注释，让大家了解每一步的意义，以及`R`的简单易用。我也希望，自己的语言能尽力通俗，对于其他工具的使用者来说。
 
 - 第 \@ref(interface) 章介绍了`rBAS`中的用户界面的调用，以及运行。
 
+- 第 \@ref(examples) 章主要介绍的是BAS及变体算法**在多杆机构优化中的应用**，由群友莫小娟同学提供。
+
+- 第 \@ref(examples2) 章主要介绍的是BAS及变体算法**在龙门起重机控制优化中的应用**，由群友李晓晓同学提供。
+
+- 第 \@ref(python) 章主要介绍吴会欢同学提供的python接口，目前有基本的BAS，以及三个测试函数，后续会持续更新。
+
+- 第 \@ref(matlabr) 章中主要介绍了两种方法供matlab用户来使用rBAS package。当然，未来可能会出现matlab中R的接口，或者是BAS toolbox，到时候此章无用。如果你发现了**更便捷的方法**，来实现两者的通讯，还请[提出建议](https://github.com/jywang2016/rBAS_documents/issues)。
+
+- 第 \@ref(paper) 章用于收录基于BAS及相关算法的工具箱，软件或者文献等等。
+
 - 第 \@ref(updates) 章讲述了`rBAS`包的**开发和使用手册更新的计划**。因为算法总是会不断地推陈出新，所以`rBAS`包也必须和目前的研究保持一致。如果你有好的想法，可以看此章的内容，然后把自己的建议传达给我们。
+
+
 
 >好了，冗长的章节介绍完毕。大家可以开始浏览正文了。
 
+由于后续的案例中，会带有大量的动态图片。为了方便大家的浏览，强烈推荐在网页上阅读本手册，https://jywang2016.github.io/rBAS_documents/ 。此外，由于个人能力与时间有限，希望大家看到相关的BAS文章或者工作后，可以在 https://github.com/jywang2016/rBAS_documents/issues  上**写明文章的信息，应用的领域以及采用的是哪种BAS算法**，以此来帮助我的整理。十分感谢大家的帮助！
 
 ## 夹带私货 {-}
 
@@ -52,11 +67,15 @@ github-repo: jywang2016/rBAS
 
 此外，还感谢`李晓晓`,`王甜甜`,`莫小娟`,`阮月`同学贡献自己的算法代码和应用案例，他(她)们改进了算法，并且让其应用部分变得更加丰富。
 
+感谢`吴会欢`同学提供了`python`的接口，虽然目前只有基本的BAS，但后续会更加完善。
+
 当然，还得感谢Yihui的`bookdown`。
 
 老实讲，2018/07,也就是一个月以前，我刚开始用`R`编写这个算法，然后用在自己的建筑系统辨识研究中，没想到$\dots$ 所以，这个手册是比较仓促的产物，再加之自身关于优化算法理论水平较低，如果大家发现了本手册的各种问题，欢迎在QQ群(437958608)内留言，或者是在`rBAS`的 github上提出 [issues](https://github.com/jywang2016/rBAS/issues)。
 
 总之，谢谢上述老师及同学，也谢谢未来给我提供问题或建议的同学，你们的帮助，让手册更加完善。
+
+最后的最后，希望大家尽量用 https://jywang2016.github.io/rBAS_documents/ 来访问本手册，PDF不支持案例中的动态图片展示。
 
 
 ```{block2, type='flushright', html.tag='p'}
