--- a/06-paper.Rmd
+++ b/06-paper.Rmd
@@ -34,6 +34,7 @@ Particle Swarm Optimization[C]. ECAR 2018. ISBN:978-1-60595-579-7
 神经网络结合
 
 - 王甜甜, 刘强. 基于BAS-BP模型的风暴潮灾害损失预测[J]. 海洋环境科学, 2018, 37(3):457-463.
+- 骆正山,姚梦月,骆济豪,王小完.基于KPCA-BAS-GRNN的埋地管道外腐蚀速率预测[J].表面技术,2018,47(11):173-180.
 
 [极限学习机](https://arxiv.org/ftp/arxiv/papers/1811/1811.09100.pdf)
 
@@ -80,6 +81,7 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 室内定位
 
 - 邹东尧,陈鹏伟,刘宽.基于天牛须搜索优化的室内定位算法[J].湖北民族学院学报(自然科学版),2018(04):427-431+455.
+
 
 ## 专利
 
