--- a/06-paper.Rmd
+++ b/06-paper.Rmd
@@ -35,6 +35,7 @@ Particle Swarm Optimization[C]. ECAR 2018. ISBN:978-1-60595-579-7
 
 - 王甜甜, 刘强. 基于BAS-BP模型的风暴潮灾害损失预测[J]. 海洋环境科学, 2018, 37(3):457-463.
 - 骆正山,姚梦月,骆济豪,王小完.基于KPCA-BAS-GRNN的埋地管道外腐蚀速率预测[J].表面技术,2018,47(11):173-180.
+- Sun, Yuantian, et al. "Optimized neural network using beetle antennae search for predicting the unconfined compressive strength of jet grouting coalcretes." International Journal for Numerical and Analytical Methods in Geomechanics (2019).
 
 [极限学习机](https://arxiv.org/ftp/arxiv/papers/1811/1811.09100.pdf)
 
