--- a/06-paper.Rmd
+++ b/06-paper.Rmd
@@ -86,9 +86,10 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 
 ## 专利
 
-- 基于天牛须搜索的SDN网络中多目标组播路由路径构建方法
-- 奇异值分解和天牛须寻优算法的灰度图像自适应增强方法
-- 基于天牛须算法和数学形态学的射线图像焊缝提取方法
+- 基于天牛须搜索的SDN网络中多目标组播路由路径构建方法(2017112674013)
+- 奇异值分解和天牛须寻优算法的灰度图像自适应增强方法(2018102015635)
+- 基于天牛须算法和数学形态学的射线图像焊缝提取方法(2018103673035)
+- 一种基于天牛群优化算法的激光谐振腔设计方法(2018112408058)
 
 此外，由于个人能力与时间有限，希望大家看到相关的BAS文章或者软件后，可以在 https://github.com/jywang2016/rBAS_documents/issues  上**写明文章(软件)的信息，应用的领域（如果有具体的应用案例的话）以及采用的是哪种BAS算法**，以此来帮助我的整理。十分感谢大家的帮助！
 
