论文与专利更新

--- a/06-paper.Rmd
+++ b/06-paper.Rmd
@@ -78,6 +78,7 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 奇异值分解(图像)
 
 - 肖振久,姜东,张晗等.增强奇异值分解的自适应零水印[J]. 中国图像图形学报,2018,10.
+- 肖振久,宁秋莹,张晗,唐晓亮,陈虹.NMF和增强奇异值分解的自适应零水印算法[J/OL].计算机应用研究:1-7[2019-01-28].https://doi.org/10.19734/j.issn.1001-3695.2018.09.0751.
 
 室内定位
 
@@ -90,6 +91,8 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 - 奇异值分解和天牛须寻优算法的灰度图像自适应增强方法(2018102015635)
 - 基于天牛须算法和数学形态学的射线图像焊缝提取方法(2018103673035)
 - 一种基于天牛群优化算法的激光谐振腔设计方法(2018112408058)
+- 基于天牛须搜索算法的空间圆柱度误差评定方法(2018106999239)
+- 一种BASA优化GRBF-SVM的液压泵故障检测方法及系统(2018109210959)
 
 此外，由于个人能力与时间有限，希望大家看到相关的BAS文章或者软件后，可以在 https://github.com/jywang2016/rBAS_documents/issues  上**写明文章(软件)的信息，应用的领域（如果有具体的应用案例的话）以及采用的是哪种BAS算法**，以此来帮助我的整理。十分感谢大家的帮助！
 
