--- a/02-mixalgorithm.Rmd
+++ b/02-mixalgorithm.Rmd
@@ -181,12 +181,12 @@ V_i^c = \begin{cases}
 step3: 有了速度分量后，如何更新 $x_{best}$ 呢？ 和实数空间上的优化问题不同，如果直接把速度与对应的位置向量相加，这势必不符合会使得原有的位置向量脱离0-1的范畴。实际上，更新方式如式\@ref(eq:xupdatebBAS)所示。
 
 \begin{equation}
-x_i(t+1)=\begin{cases}
-&\overline{x_i}(t) & if\quad rand() \leq S(V_i)\\
-&x_i(t) & if\quad rand() > S(V_i)
-\end{cases}
-(\#eq:xupdatebBAS)
-\end{equation}
+x_i(t+1)=\begin{cases} 
+\overline{x_i}(t) & if\quad rand() \leq S(V_i)\\ 
+x_i(t) & if\quad rand() > S(V_i) 
+\end{cases} 
+(\#eq:xupdatebBAS) 
+\end{equation} 
 
 当生成的服从均匀分布 $U(0,1)$ 的随机数向量（长度与速度相同），某些元素小于等于状态转换概率 $S(V_i)$ 时，那么下一时刻的位置等于在这些元素对应位置上的位置**取非**。反之，保持不变。例如，位置向量 $x_t = (1,1,1,0,0,1,0)$ ，如果其 2,3,5元素上满足随机数小于等于转换概率条件，那么下一时刻的位置为 $x_{t+1}=(1,0,0,0,1,1,0)$ 。
 
