--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -171,7 +171,7 @@
 
 \title{rBAS使用文档}
 \author{王江宇}
-\date{2019-02-02}
+\date{2019-03-14}
 
 \let\BeginKnitrBlock\begin \let\EndKnitrBlock\end
 \begin{document}
@@ -3724,7 +3724,7 @@ R代码使用\texttt{BSO}解这个优化问题是这样的效果。
 
 \begin{verbatim}
 ##    user  system elapsed 
-##    0.12    0.00    0.12
+##    0.11    0.01    0.12
 \end{verbatim}
 
 \begin{Shaded}
@@ -3951,7 +3951,7 @@ double test(NumericVector x) {
 
 \begin{verbatim}
 ##    user  system elapsed 
-##    0.13    0.00    0.13
+##    0.14    0.00    0.14
 \end{verbatim}
 
 \begin{Shaded}
@@ -4111,7 +4111,7 @@ NumericVector PVcon(NumericVector x) {
 
 \begin{verbatim}
 ##    user  system elapsed 
-##    1.96    0.00    1.95
+##    1.98    0.00    1.98
 \end{verbatim}
 
 \begin{Shaded}
@@ -4165,7 +4165,7 @@ NumericVector PVcon(NumericVector x) {
 
 \begin{verbatim}
 ##    user  system elapsed 
-##    0.48    0.00    0.48
+##    0.49    0.00    0.48
 \end{verbatim}
 
 \begin{Shaded}
@@ -4276,6 +4276,17 @@ NumericVector PVcon(NumericVector x) {
   arXiv preprint arXiv:1811.09100, 2018
 \end{itemize}
 
+支持向量机
+
+\begin{itemize}
+\tightlist
+\item
+  Sun J, Zhang J, Gu Y, et al. Prediction of permeability and unconfined
+  compressive strength of pervious concrete using evolved support vector
+  regression{[}J{]}. Construction and Building Materials, 2019, 207:
+  440-449.
+\end{itemize}
+
 Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 
 \begin{itemize}
@@ -4339,6 +4350,16 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
   Evaluation Method Based on Search Algorithm of Beetle,'', Wang K, Wang
   Y, Strandhagen JO, Yu T, eds. (Springer Singapore, Singapore, 2019),
   pp.~368-374.
+\end{itemize}
+
+系统辨识
+
+\begin{itemize}
+\tightlist
+\item
+  Wang J, Chen H, Yuan Y, et al. A novel efficient optimization
+  algorithm for parameter estimation of building thermal dynamic
+  models{[}J{]}. Building and Environment, 2019,153,233-240.
 \end{itemize}
 
 目标识别
