新增调差技巧章节

--- a/06-updates.Rmd
+++ b/06-updates.Rmd
@@ -1,12 +1,16 @@
 # 更新及维护计划 {#updates}
 
+## 工具箱
+
+计划开发BAS算法的`Matlab`工具箱。
+
 ## 待加入的功能
 
 算法:
 
 - ~~加入`BSAS`~~
 - ~~加入`BSAS-WPT`~~
-- 加入`binary BAS` (阮月)
+- ~~加入`binary BAS`~~ (阮月)
 - ~~加入二阶 `BAS`~~ (李晓晓)
 - ~~add `BSO(Beetle Swarm Optimizaiton)`~~ (王甜甜)
 - ...
@@ -16,9 +20,8 @@
 - 工程应用:
     + ~~多杆件机构优化~~(莫小娟)
     + ~~龙门起重机摆角优化~~(李晓晓)
-    + 建筑系统阻容模型辨识
     + 装配路径规划
-    + 批量问题(binary BAS)
+    + ~~批量问题(binary BAS)~~(阮月)
     + ...
 - 基准测试
     + 计划超过20个基准测试
