--- a/article.bib
+++ b/article.bib
@@ -22,3 +22,10 @@
   journal={arXiv},
   year={2018},
 }
+@article{Zhang2019BASCon,
+  title={BAS: Convergence analysis of beetle antennae search algorithm and its applications},
+  author={Zhang Yinyan, Li Shuai, Xu Bin},
+  journal={arXiv},
+  url = {128.84.21.199/abs/1904.02397},
+  year={2019},
+}
