--- a/06-paper.Rmd
+++ b/06-paper.Rmd
@@ -35,7 +35,7 @@ Particle Swarm Optimization[C]. ECAR 2018. ISBN:978-1-60595-579-7
 
 - 王甜甜, 刘强. 基于BAS-BP模型的风暴潮灾害损失预测[J]. 海洋环境科学, 2018, 37(3):457-463.
 - 骆正山,姚梦月,骆济豪,王小完.基于KPCA-BAS-GRNN的埋地管道外腐蚀速率预测[J].表面技术,2018,47(11):173-180.
-- Sun, Yuantian, et al. "Optimized neural network using beetle antennae search for predicting the unconfined compressive strength of jet grouting coalcretes." International Journal for Numerical and Analytical Methods in Geomechanics (2019).
+- Sun Y, Zhang J, Li G, et al. Optimized neural network using beetle antennae search for predicting the unconfined compressive strength of jet grouting coalcretes[J]. International Journal for Numerical and Analytical Methods in Geomechanics, 2019, 43(4): 801-813.
 
 [极限学习机](https://arxiv.org/ftp/arxiv/papers/1811/1811.09100.pdf)
 
@@ -44,6 +44,7 @@ Particle Swarm Optimization[C]. ECAR 2018. ISBN:978-1-60595-579-7
 支持向量机
 
 - Sun J, Zhang J, Gu Y, et al. Prediction of permeability and unconfined compressive strength of pervious concrete using evolved support vector regression[J]. Construction and Building Materials, 2019, 207: 440-449.
+- Sun Y, Zhang J, Li G, et al. Determination of Young's modulus of jet grouted coalcretes using an intelligent model[J]. Engineering Geology, 2019, 252: 43-53.
 
 Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 
@@ -55,7 +56,9 @@ Qubit神经树网络（结合PIPE与BAS进行网络结构参数优化）
 
 组合投资分析
 
-- Chen T. Beetle Swarm Optimization for Solving Investment Portfolio Problems[J]. The Journal of Engineering, 2018.
+- Chen T, Zhu Y, Teng J. Beetle swarm optimisation for solving investment portfolio problems[J]. The Journal of Engineering, 2018, 2018(16): 1600-1605.
+
+- 陈婷婷, 殷贺, 江红莉, 等. 基于天牛须搜索的粒子群优化算法求解投资组合问题[J]. 计算机系统应用, 2019, 28(2): 171-176.
 
 用于传感器网络覆盖
 
